# red

./: Cargo.toml  demo.md  readme.md
src/: buffer.rs  editor.rs  main.rs  terminal.rs
