[package]
name = "red"
version = "1.0.0"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/bacal/red"
description = "A barebones text editor"
authors  = ["Bacal Mesfin <mesfinb2@vcu.edu>"]
homepage = "https://github/bacal/red"

[package.metadata.bundle]
name = "red"
identifier = "xyz.bacal.red"
category = "Utility"
short_description = "A barebones text editor"
long_description = """
A barebones text editor.
This editor contains basic features such as opening,closing,and writing to files.
There aren't that many epic features included so don't expect much.
"""

[dependencies]
crossterm = "0.25.0"
#clap = "4.0.26"
colored = "2.0.0"